--- a/accessibility.html
+++ b/accessibility.html
@@ -16,7 +16,7 @@
     <a href="canteen.html">Canteens</a>
     <a href="accessibility.html">Accessibility</a>      
 </header>
-
+<!-- each class ends with 'accessibility' to signify its affiliation in the css-->
 <main class="main-accessibility">
     <h1>Accessibility</h1>
     <div class="container-accessibility">
